Signalrchat/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  namespace: YOUR_NAMESPACE
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "demo.pixiray.ninja"
    secretName: goddess-secret
  rules:
  - host: "demo.pixiray.ninja"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            #name: signalrchat-service
            name: chat-service
            port:
              number: 80
